<resources>
    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="placeholder">String</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="cities">Cities</string>
    <string name="settings">Settings</string>
    <string name="metric">Metric</string>
    <string name="celsius">Celsius</string>
    <string name="save">Save</string>
    <string name="preference_file_key">com.example.myapp.PREFERENCE_FILE_KEY</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="delete">Delete</string>
    <string name="deleteCity">Delete City</string>
    <string name="add_city">Add New City</string>
    <string name="deg_celsius">°C</string>
    <string name="deg_fahrenheit">°F</string>
    <string name="weathericon">Weather Icon</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="city_in_country">%s in %s</string>
    <string name="timezone">Timezone: %s </string>
    <string name="sunrise">Sunrise: %s </string>
    <string name="sunset">Sunset: %s </string>
    <string name="weather_state">%s </string>
    <string name="weather_max">High:  %s </string>
    <string name="weather_min">Low:  %s </string>
    <string name="weather_air_pressure">Air Pressure:  %d </string>
    <string name="weather_humidity">Humidity:  %d</string>
    <string name="weather_visibility">Visibility:  %d </string>
    <string name="weather_wind_direction">Wind Direction:  %d </string>
    <string name="show_lat_long">Show Latitude and Longitude</string>
</resources>