<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/metric"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/metricRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/celsiusRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celsius"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/fahrenheitRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"
                android:textSize="16sp" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/show_lat_long_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_lat_long" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>